# docs/swagger.json
@@ -120,6 +120,46 @@
                 }
             }
         },
+        "/user/{id}/password": {
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "更新用户密码",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "更新用户密码信息",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.ChangePasswordCommand"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\": \"modify success\"}",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/user/{id}/role": {
             "patch": {
                 "consumes": [
@@ -223,12 +263,17 @@
                 }
             }
         },
+        "domain.ChangePasswordCommand": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.CreateUserCommand": {
             "type": "object",
             "properties": {
-                "avatar": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -238,16 +283,13 @@
                 "name": {
                     "type": "string"
                 },
-                "org_display_name": {
+                "password": {
                     "type": "string"
                 },
                 "role": {
                     "$ref": "#/definitions/enum.SysRole"
                 },
                 "username": {
-                    "type": "string"
-                },
-                "wx_work_user_id": {
                     "type": "string"
                 }
             }
@@ -271,9 +313,6 @@
         "domain.User": {
             "type": "object",
             "properties": {
-                "avatar": {
-                    "type": "string"
-                },
                 "created_at": {
                     "type": "string"
                 },
@@ -285,9 +324,6 @@
                 },
                 "enable": {
                     "description": "1：启用   2：禁用",
-                    "type": "integer"
-                },
-                "gitlab_user_id": {
                     "type": "integer"
                 },
                 "id": {
@@ -305,9 +341,6 @@
                 "name": {
                     "type": "string"
                 },
-                "org_display_name": {
-                    "type": "string"
-                },
                 "role": {
                     "description": "0:普通用户，1:管理员，2:虚拟用户",
                     "allOf": [
@@ -317,9 +350,6 @@
                     ]
                 },
                 "username": {
-                    "type": "string"
-                },
-                "wx_work_user_id": {
                     "type": "string"
                 }
             }
